--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -182,27 +182,25 @@ nfpms:
       # Basic file that applies to all packagers
       - src: NOTICE
         dst: /usr/share/doc/cloudfuse/NOTICE
-
       - src: LICENSE
         dst: /usr/share/doc/cloudfuse/LICENSE
-
       - src: setup/baseConfig.yaml
         dst: /usr/share/cloudfuse/baseConfig.yaml
-
       - src: sampleFileCacheConfigAzure.yaml
         dst: /usr/share/cloudfuse/sampleFileCacheConfigAzure.yaml
-
       - src: sampleFileCacheConfigS3.yaml
         dst: /usr/share/cloudfuse/sampleFileCacheConfigS3.yaml
-
       - src: sampleFileCacheWithSASConfigAzure.yaml
         dst: /usr/share/cloudfuse/sampleFileCacheWithSASConfigAzure.yaml
-
       - src: sampleStreamingConfigS3.yaml
         dst: /usr/share/cloudfuse/sampleStreamingConfigS3.yaml
-
       - src: sampleStreamingConfigAzure.yaml
         dst: /usr/share/cloudfuse/sampleStreamingConfigAzure.yaml
+
+      - src: ./gui/cloudfuse.desktop
+        dst: /usr/share/applications/cloudfuse.desktop
+      - src: "./gui/dist/cloudfuseGUI_linux/*"
+        dst: "/opt/cloudfuse"
   
     overrides:
       deb:
