--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ __debug_bin
 **/var.ps1
 *.prof
 cpplite/
-build/
 test/manual_scripts/create1000.go
 test/manual_scripts/cachetest.go
 lint.log
@@ -32,3 +31,6 @@ ui_*.py
 test/scripts/dirIterate.go
 **/logfile.txt
 dist/
+**/Output/
+/gui/build/**
+/build/winfsp-*
