Create release pipeline with three jobs: compile-gui uses pyinstaller on Linux and Windows to get GUI binaries create-installer uses Inno Setup to build the Windows app installer release uses goreleaser to package and release the binaries the jobs share intermediate build products using actions/cache

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -137,6 +137,7 @@ jobs:
           if [[ "${{ env.cgo }}" != "" ]]; then echo 'CGO_ENABLED=${{ env.cgo }}' >> $GITHUB_ENV ; fi
 
       - name: Build
+        shell: bash
         run: |
           ./build.sh
 
