Use enableCrossOsArchive when restoring GUI for Windows installer

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -101,6 +101,7 @@ jobs:
         name: Fetch cached compiled GUI
         uses: actions/cache/restore@v3
         with:
+          enableCrossOsArchive: true
           path: gui/dist/cloudfuseGUI_${{ runner.os }}
           key: ${{ runner.os }}-compiled-gui-${{ hashFiles('gui/*.ui', 'gui/*.py') }}
           fail-on-cache-miss: true
