--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -47,6 +47,7 @@ builds:
       - CGO_ENABLED=1
       - CC=aarch64-linux-gnu-gcc
       - CXX=aarch64-linux-gnu-g++
+      - PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
     flags:
       - -trimpath
     mod_timestamp: '{{ .CommitTimestamp }}'
