Always use crossOs when fetching a crossOs cache item on WIndows

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -19,6 +19,7 @@ jobs:
         id: restore-compiled-gui
         uses: actions/cache/restore@v3
         with:
+          enableCrossOsArchive: true
           path: gui/dist/cloudfuseGUI_${{ runner.os }}
           key: ${{ runner.os }}-compiled-gui-${{ hashFiles('gui/*.ui', 'gui/*.py') }}
       -
