--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -131,6 +131,10 @@ jobs:
 
     steps:
       -
+        name: Install Libfuse
+        run: |
+          sudo apt-get install -y libfuse-dev
+      -
         name: Install ARM64 compilers
         run: |
           sudo apt-get install -y gcc-aarch64-linux-gnu
