Quote ldflags correctly

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -80,8 +80,8 @@ jobs:
         run: |
           commitDate=$(git log -1 --format=%cd --date=format:%Y-%m-%dT%H:%M:%S)
           ldflags="-s -w -X main.version=${{ github.ref_name }} -X main.commit=${{ github.sha }} -X main.date=$commitDate"
-          go build -trimpath -ldflags '$ldflags' -o cloudfuse.exe
-          go build -trimpath -ldflags '$ldflags' -o cfusemon.exe ./tools/health-monitor/
+          go build -trimpath -ldflags ''$ldflags'' -o cloudfuse.exe
+          go build -trimpath -ldflags ''$ldflags'' -o cfusemon.exe ./tools/health-monitor/
           touch -m -d $commitDate cloudfuse.exe
           touch -m -d $commitDate cfusemon.exe
       -
