--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -167,16 +167,11 @@ jobs:
           key: windows-cloudfuse-installer-${{ github.sha }}
           fail-on-cache-miss: true
       -
-        name: Hash GUI files
-        id: fingerprintgui
-        run: |
-          echo "::set-output name=hash::${{ hashFiles('gui/*.ui', 'gui/*.py') }}"
-      -
         name: Restore Linux compiled GUI
         uses: actions/cache/restore@v3
         with:
           path: gui/dist/cloudfuseGUI_Linux
-          key: Linux-compiled-gui-${{ steps.fingerprintgui.outputs.hash }}
+          key: Linux-compiled-gui-${{ hashFiles('gui/*.ui', 'gui/*.py') }}
           fail-on-cache-miss: true
       -
         name: Restore Windows compiled GUI
@@ -184,8 +179,8 @@ jobs:
         with:
           enableCrossOsArchive: true
           path: gui/dist/cloudfuseGUI_Windows
-          key: Windows-compiled-gui-${{ steps.fingerprintgui.outputs.hash }}
-          fail-on-cache-miss: true
+          key: Windows-compiled-gui-${{ hashFiles('gui/*.ui', 'gui/*.py') }}
+          restore-keys: Windows-compiled-gui-
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
