--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   compile-gui:
+    # Compile the GUI on Windows & Linux, and write the GUI binaries to actions/cache
     name: Compile GUI
     strategy:
       matrix:
@@ -20,6 +21,8 @@ jobs:
         id: restore-compiled-gui
         uses: actions/cache/restore@v3
         with:
+          # enableCrossOsArchive always needs to be set on cached items in Windows jobs
+          # see cache documentation: https://github.com/actions/cache#inputs
           enableCrossOsArchive: true
           path: gui/dist/cloudfuseGUI_${{ runner.os }}
           key: ${{ runner.os }}-compiled-gui-${{ hashFiles('gui/*.ui', 'gui/*.py') }}
@@ -53,6 +56,7 @@ jobs:
           key: ${{ runner.os }}-compiled-gui-${{ hashFiles('gui/*.ui', 'gui/*.py') }}
 
   create-installer:
+    # Run Inno Setup to create the Windows app installer, then write it to actions/cache
     name: Create Windows Installer
     needs: compile-gui
     runs-on: windows-latest
@@ -61,7 +65,7 @@ jobs:
       cgo: '0'
       winfsp: winfsp-2.0.23075.msi
     steps:
-      -
+      - # Build the command-line program
         name: Checkout code
         uses: actions/checkout@v4
       -
@@ -85,7 +89,7 @@ jobs:
           go build -trimpath -ldflags ''"$ldflags"'' -o cfusemon.exe ./tools/health-monitor/
           touch -m -d $commitDate cloudfuse.exe
           touch -m -d $commitDate cfusemon.exe
-      -
+      - # Get the WinFSP installer (from cache or download)
         name: Get cached WinFSP installer
         id: restore-winfsp-installer
         uses: actions/cache/restore@v3
@@ -113,8 +117,12 @@ jobs:
           path: gui/dist/cloudfuseGUI_${{ runner.os }}
           key: ${{ runner.os }}-compiled-gui-${{ hashFiles('gui/*.ui', 'gui/*.py') }}
           fail-on-cache-miss: true
-      -
+        # don't continue if we fail get the compiled GUI for the Windows installer
+        continue-on-error: false
+      - # Build the installer and save it to actions/cache
         name: Run Inno Setup
+        # Inno Setup is pre-installed on GitHub's windows-latest image
+        # see documentation: https://github.com/actions/runner-images/blob/main/images/windows/Windows2022-Readme.md
         run: |
           & "C:/Program Files (x86)/Inno Setup 6/iscc.exe" build/windows_installer_build.iss
       -
@@ -130,6 +138,7 @@ jobs:
           key: windows-cloudfuse-installer-${{ github.sha }}
 
   release:
+    # Use GoReleaser to package and publish Linux releases along with the Windows installer
     name: Release Binaries
     needs: create-installer
     runs-on: ubuntu-latest
@@ -137,15 +146,15 @@ jobs:
       go: '1.20'
 
     steps:
-      -
+      - # libfuse-dev is required to build our command-line program
         name: Install Libfuse
         run: |
           sudo apt-get install -y libfuse-dev
-      -
+      - # enable GoReleaser to build for ARM64
         name: Install ARM64 compilers
         run: |
           sudo apt-get install -y gcc-aarch64-linux-gnu
-      -
+      - # Get code and Go ready
         name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -156,7 +165,7 @@ jobs:
         with:
           go-version: ${{ env.go }}
           check-latest: true
-      -
+      - # Get cached intermediate build products
         name: Restore cached Windows installer
         uses: actions/cache/restore@v3
         with:
@@ -164,6 +173,7 @@ jobs:
           path: build/Output/cloudfuse_install_Windows_x86_64.exe
           key: windows-cloudfuse-installer-${{ github.sha }}
           fail-on-cache-miss: true
+        continue-on-error: false
       -
         name: Restore Linux compiled GUI
         uses: actions/cache/restore@v3
@@ -171,6 +181,7 @@ jobs:
           path: gui/dist/cloudfuseGUI_Linux
           key: Linux-compiled-gui-${{ hashFiles('gui/*.ui', 'gui/*.py') }}
           fail-on-cache-miss: true
+        continue-on-error: false
       -
         name: Restore Windows compiled GUI
         uses: actions/cache/restore@v3
@@ -178,8 +189,12 @@ jobs:
           enableCrossOsArchive: true
           path: gui/dist/cloudfuseGUI_Windows
           key: Windows-compiled-gui-${{ hashFiles('gui/*.ui', 'gui/*.py') }}
+          # the hash value comes out different on Linux vs Windows
+          # so we need to use restore-keys to match the Windows compiled GUI
+          # see documentation: https://github.com/actions/cache/blob/main/restore/README.md#inputs
           restore-keys: Windows-compiled-gui-
-      -
+        continue-on-error: false
+      - # Run GoReleaser (see .goreleaser.yaml)
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
