--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -24,8 +24,53 @@ builds:
     mod_timestamp: '{{ .CommitTimestamp }}'
     ldflags:
       - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }}
+    
+  - id: windows-startup
+    main: ./tools/windows-startup/main.go
+    binary: windows-startup
+    goos:
+      - windows
+    goarch:
+      - amd64
+    env:
+      - CGO_ENABLED=0
+    flags:
+      - -trimpath
+    mod_timestamp: '{{ .CommitTimestamp }}'
+    ldflags:
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }}
+    
+  - id: windows-health-monitor
+    main: ./tools/health-monitor/main.go
+    binary: cfusemon
+    goos:
+      - windows
+    goarch:
+      - amd64
+    env:
+      - CGO_ENABLED=0
+    flags:
+      - -trimpath
+    mod_timestamp: '{{ .CommitTimestamp }}'
+    ldflags:
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }}
 
   - id: linux-amd64
+    goos:
+      - linux
+    goarch:
+      - amd64
+    env:
+      - CGO_ENABLED=1
+    flags:
+      - -trimpath
+    mod_timestamp: '{{ .CommitTimestamp }}'
+    ldflags:
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }}
+
+  - id: linux-amd64-health-monitor
+    main: ./tools/health-monitor/main.go
+    binary: cfusemon
     goos:
       - linux
     goarch:
@@ -53,6 +98,23 @@ builds:
     ldflags:
       - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }}
 
+  - id: linux-arm64-health-monitor
+    main: ./tools/health-monitor/main.go
+    binary: cfusemon
+    goos:
+      - linux
+    goarch:
+      - arm64
+    env:
+      - CGO_ENABLED=1
+      - CC=aarch64-linux-gnu-gcc
+      - CXX=aarch64-linux-gnu-g++
+    flags:
+      - -trimpath
+    mod_timestamp: '{{ .CommitTimestamp }}'
+    ldflags:
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }}
+
 checksum:
   name_template: "checksums_sha256.txt"
   algorithm: sha256
@@ -61,7 +123,9 @@ archives:
   - id: linux-amd64
     builds:
       - linux-amd64
+      - linux-amd64-health-monitor
     format: tar.gz
+
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
       {{ .ProjectName }}_
@@ -92,7 +156,9 @@ archives:
   - id: linux-arm64
     builds:
       - linux-arm64
+      - linux-arm64-health-monitor
     format: tar.gz
+
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
       {{ .ProjectName }}_
@@ -121,6 +187,8 @@ archives:
   - id: windows
     builds:
       - windows
+      - windows-startup
+      - windows-health-monitor
     format: zip
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
@@ -179,10 +247,16 @@ nfpms:
 
     section: default
 
+    provides:
+      - cloudfuse
+      - cfusemon
+
     # Contents to add to the package.
     # GoReleaser will automatically add the binaries.
     contents:
       # Basic file that applies to all packagers
+      - src: './dist/linux-{{ .Arch }}-health-monitor_linux_{{ .Arch }}{{- if eq .Arch "amd64" }}_{{ .Amd64 }}{{- else }}{{ end }}/cfusemon'
+        dst: /usr/bin/cfusemon
       - src: NOTICE
         dst: /usr/share/doc/cloudfuse/NOTICE
       - src: LICENSE
