--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -87,8 +87,10 @@ jobs:
           ldflags="-s -w -X main.version=${{ github.ref_name }} -X main.commit=${{ github.sha }} -X main.date=$commitDate"
           go build -trimpath -ldflags ''"$ldflags"'' -o cloudfuse.exe
           go build -trimpath -ldflags ''"$ldflags"'' -o cfusemon.exe ./tools/health-monitor/
+          go build -trimpath -ldflags ''"$ldflags"'' -o windows-startup.exe ./tools/windows-startup/
           touch -m -d $commitDate cloudfuse.exe
           touch -m -d $commitDate cfusemon.exe
+          touch -m -d $commitDate windows-startup.exe
       - # Get the WinFSP installer (from cache or download)
         name: Get cached WinFSP installer
         id: restore-winfsp-installer
