Fix Windows naming issues

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -130,13 +130,13 @@ jobs:
       -
         name: Rename installer
         run: |
-          mv build/Output/cloudfuse.exe build/Output/cloudfuse_install_Windows_x86_64.exe
+          mv build/Output/cloudfuse.exe build/Output/cloudfuse_${{ echo github.ref_name | tr -d 'v' }}_windows_amd64.exe
       -
         name: Cache windows installer
         uses: actions/cache/save@v3
         with:
           enableCrossOsArchive: true
-          path: build/Output/cloudfuse_install_Windows_x86_64.exe
+          path: build/Output/cloudfuse_${{ echo github.ref_name | tr -d 'v' }}_windows_amd64.exe
           key: windows-cloudfuse-installer-${{ github.sha }}
 
   release:
@@ -172,7 +172,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           enableCrossOsArchive: true
-          path: build/Output/cloudfuse_install_Windows_x86_64.exe
+          path: build/Output/cloudfuse_${{ echo github.ref_name | tr -d 'v' }}_windows_amd64.exe
           key: windows-cloudfuse-installer-${{ github.sha }}
           fail-on-cache-miss: true
         continue-on-error: false
