--- a/.github/workflows/test-sign-installer.yml
+++ b/.github/workflows/test-sign-installer.yml
@@ -162,12 +162,12 @@ jobs:
         name: Prep Inno Setup Script
         shell: bash
         run: |
-          printf '%s ' >run-iscc.bat \
+          printf '%s ' >build/run-iscc.bat \
             '"C:/Program Files (x86)/Inno Setup 6/iscc.exe"' \
             '"/Ssigntool=$qC:\Program Files (x86)\Windows Kits\10\App Certification Kit\signtool.exe$q $p"' \
             'windows_installer_build.iss'
           pwd
-          cat run-iscc.bat
+          cat build/run-iscc.bat
       -
         name: Run Inno Setup
         # Inno Setup is pre-installed on GitHub's windows-latest image
