Use single quotes to prevent variable expansion

--- a/.github/workflows/test-sign-installer.yml
+++ b/.github/workflows/test-sign-installer.yml
@@ -164,9 +164,9 @@ jobs:
         run: |
           printf '%s ' >build/run-iscc.bat \
             '"C:/Program Files (x86)/Inno Setup 6/iscc.exe"' \
-            "'/Ssigntool=$qC:\Program Files (x86)\Windows Kits\10\App Certification Kit\signtool.exe$q" \
-            "sign /fd SHA256 /a /f $q${{ github.workspace }}\build\appSigningCert.pfx$q" \
-            "/n $qSEAGATE TECHNOLOGY LLC$q /t http://timestamp.digicert.com $p' build/windows_installer_build.iss"
+            '''/Ssigntool=$qC:\Program Files (x86)\Windows Kits\10\App Certification Kit\signtool.exe$q' \
+            'sign /fd SHA256 /a /f $q${{ github.workspace }}\build\appSigningCert.pfx$q' \
+            '/n $qSEAGATE TECHNOLOGY LLC$q /t http://timestamp.digicert.com $p'' build/windows_installer_build.iss'
       -
         name: Run Inno Setup
         # Inno Setup is pre-installed on GitHub's windows-latest image
