--- a/.github/workflows/test-sign-installer.yml
+++ b/.github/workflows/test-sign-installer.yml
@@ -162,19 +162,19 @@ jobs:
         name: Prep Inno Setup Script
         shell: bash
         run: |
-          printf '%s ' >build/run-iscc.bat \
+          cd build
+          printf '%s ' >run-iscc.bat \
             '"C:/Program Files (x86)/Inno Setup 6/iscc.exe"' \
             '"/Ssigntool=$qC:\Program Files (x86)\Windows Kits\10\App Certification Kit\signtool.exe$q' \
             'sign /fd SHA256 /a /f $q${{ github.workspace }}\build\appSigningCert.pfx$q' \
             '/n $qSEAGATE TECHNOLOGY LLC$q /t http://timestamp.digicert.com $p"' \
-            "build/windows_installer_build.iss"
-          cat build/run-iscc.bat
+            "windows_installer_build.iss"
+          cat run-iscc.bat
       -
         name: Run Inno Setup
         # Inno Setup is pre-installed on GitHub's windows-latest image
         # see documentation: https://github.com/actions/runner-images/blob/main/images/windows/Windows2022-Readme.md
         run: |
-          cd build
           .\run-iscc.bat
       -
         name: Rename installer
