--- a/.github/workflows/test-sign-installer.yml
+++ b/.github/workflows/test-sign-installer.yml
@@ -166,7 +166,7 @@ jobs:
           printf '%s ' >run-iscc.bat \
             '"C:/Program Files (x86)/Inno Setup 6/iscc.exe"' \
             '"/Ssigntool=$qC:\Program Files (x86)\Windows Kits\10\App Certification Kit\signtool.exe$q' \
-            'sign /fd SHA256 /a /f $q${{ github.workspace }}\build\appSigningCert.pfx$q' \
+            'sign /fd SHA256 /a /f $q${{ github.workspace }}\build\signingKey.pfx$q' \
             '/n $qSEAGATE TECHNOLOGY LLC$q /t http://timestamp.digicert.com $p"' \
             "windows_installer_build.iss"
           cat run-iscc.bat
@@ -180,6 +180,7 @@ jobs:
       -
         name: Rename installer
         run: |
+          cd ${{ github.workspace }}
           mv build/Output/cloudfuse.exe build/Output/cloudfuse_install_Windows_x86_64.exe
       -
         name: Cache windows installer
