--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -122,11 +122,33 @@ jobs:
         # don't continue if we fail get the compiled GUI for the Windows installer
         continue-on-error: false
       - # Build the installer and save it to actions/cache
-        name: Run Inno Setup
+        name: Create PFX KeyCert File
+        working-directory: ./build
+        shell: bash
+        run: |
+          echo "${{ secrets.INSTALLER_SIGNATURE_PRIVATE_KEY }}" >> combined.pem
+          cat codeSigning.crt >> combined.pem
+          cat combined.pem | openssl pkcs12 -export -out signingKey.pfx -passout pass:
+          rm combined.pem
+      -
+        name: Prep Inno Setup Script
+        working-directory: ./build
+        shell: bash
         # Inno Setup is pre-installed on GitHub's windows-latest image
         # see documentation: https://github.com/actions/runner-images/blob/main/images/windows/Windows2022-Readme.md
         run: |
-          & "C:/Program Files (x86)/Inno Setup 6/iscc.exe" build/windows_installer_build.iss
+          printf '%s ' >run-iscc.bat \
+            '"C:/Program Files (x86)/Inno Setup 6/iscc.exe"' \
+            '"/Ssigntool=$qC:\Program Files (x86)\Windows Kits\10\App Certification Kit\signtool.exe$q' \
+            'sign /fd SHA256 /a /f $q${{ github.workspace }}\build\signingKey.pfx$q' \
+            '/n $qSEAGATE TECHNOLOGY LLC$q /t http://timestamp.digicert.com $p"' \
+            "windows_installer_build.iss"
+          cat run-iscc.bat
+      -
+        name: Run Inno Setup
+        working-directory: ./build
+        run: |
+          .\run-iscc.bat
       -
         name: Set Version
         id: get_version
